# nCCAPI

./: .gitignore  .gitmodules  CMakeLists.txt  JOURNAL.md  README.md  ascendex_log.txt  binance-us_log.txt  binance-usds-futures_log.txt  bitfinex_log.txt  bitget_log.txt  bitmex_log.txt  bitstamp_log.txt  coinbase_log.txt  deribit_log.txt  gateio_log.txt  gemini_log.txt  huobi-coin-swap_log.txt  huobi-usdt-swap_log.txt  huobi_log.txt  kraken-futures_log.txt  kraken_log.txt  kucoin-futures_log.txt  kucoin_log.txt  main.cpp  mexc_log.txt  okx_log.txt  scaffold.py  scaffold_output.txt
docs/: ARCHITECTURE.md  EXCHANGE_DETAILS.md
include/nccapi/: candle.hpp  client.hpp  exchange.hpp  instrument.hpp
include/nccapi/exchanges/: ascendex.hpp  binance-coin-futures.hpp  binance-us.hpp  binance-usds-futures.hpp  binance.hpp  bitfinex.hpp  bitget-futures.hpp  bitget.hpp  bitmart.hpp  bitmex.hpp  bitstamp.hpp  bybit.hpp  coinbase.hpp  cryptocom.hpp  deribit.hpp  erisx.hpp  gateio-perpetual-futures.hpp  gateio.hpp  gemini.hpp  huobi-coin-swap.hpp  huobi-usdt-swap.hpp  huobi.hpp  kraken-futures.hpp  kraken.hpp  kucoin-futures.hpp  kucoin.hpp  mexc-futures.hpp  mexc.hpp  okx.hpp  whitebit.hpp
include/nccapi/sessions/: ascendex_session.hpp  binance-coin-futures_session.hpp  binance-us_session.hpp  binance-usds-futures_session.hpp  binance_session.hpp  bitfinex_session.hpp  bitget-futures_session.hpp  bitget_session.hpp  bitmart_session.hpp  bitmex_session.hpp  bitstamp_session.hpp  bybit_session.hpp  coinbase_session.hpp  cryptocom_session.hpp  deribit_session.hpp  erisx_session.hpp  gateio-perpetual-futures_session.hpp  gateio_session.hpp  gemini_session.hpp  huobi-coin-swap_session.hpp  huobi-usdt-swap_session.hpp  huobi_session.hpp  kraken-futures_session.hpp  kraken_session.hpp  kucoin-futures_session.hpp  kucoin_session.hpp  mexc-futures_session.hpp  mexc_session.hpp  okx_session.hpp  unified_session.hpp  whitebit_session.hpp
src/: Exchange.hpp  UnifiedExchange.hpp  analyze_binance.cpp  ccapi_config.hpp  client.cpp  main.cpp  test_geoblock.cpp  test_global.cpp  test_historical.cpp
src/exchanges/: AscendexExchange.hpp  GenericExchange.hpp  ascendex.cpp  binance-coin-futures.cpp  binance-us.cpp  binance-usds-futures.cpp  binance.cpp  bitfinex.cpp  bitget-futures.cpp  bitget.cpp  bitmart.cpp  bitmex.cpp  bitstamp.cpp  bybit.cpp  coinbase.cpp  cryptocom.cpp  deribit.cpp  erisx.cpp  gateio-perpetual-futures.cpp  gateio.cpp  gemini.cpp  huobi-coin-swap.cpp  huobi-usdt-swap.cpp  huobi.cpp  kraken-futures.cpp  kraken.cpp  kucoin-futures.cpp  kucoin.cpp  mexc-futures.cpp  mexc.cpp  okx.cpp  whitebit.cpp
src/sessions/: ascendex_session.cpp  binance-coin-futures_session.cpp  binance-us_session.cpp  binance-usds-futures_session.cpp  binance_session.cpp  bitfinex_session.cpp  bitget-futures_session.cpp  bitget_session.cpp  bitmart_session.cpp  bitmex_session.cpp  bitstamp_session.cpp  bybit_session.cpp  coinbase_session.cpp  cryptocom_session.cpp  deribit_session.cpp  erisx_session.cpp  gateio-perpetual-futures_session.cpp  gateio_session.cpp  gemini_session.cpp  huobi-coin-swap_session.cpp  huobi-usdt-swap_session.cpp  huobi_session.cpp  kraken-futures_session.cpp  kraken_session.cpp  kucoin-futures_session.cpp  kucoin_session.cpp  mexc-futures_session.cpp  mexc_session.cpp  okx_session.cpp  unified_session.cpp  whitebit_session.cpp
src/tests/: common.hpp  test_ascendex.cpp  test_binance_us.cpp
tests/: test_historical.cpp  test_structure.cpp
tests/manual/: test_ascendex_pagination.cpp  test_binance_coin_futures_pagination.cpp  test_binance_pagination.cpp  test_binance_us_pagination.cpp  test_binance_usds_futures_pagination.cpp  test_bitfinex_pagination.cpp  test_bitget_futures_pagination.cpp  test_bitget_pagination.cpp  test_bitmart_debug.cpp  test_bitmart_pagination.cpp  test_bitmex_pagination.cpp  test_bitstamp_pagination.cpp  test_bybit_pagination.cpp  test_coinbase_pagination.cpp  test_cryptocom_pagination.cpp  test_deribit_pagination.cpp  test_gateio_futures_pagination.cpp  test_gateio_pagination.cpp  test_gemini_pagination.cpp  test_huobi_coin_swap_pagination.cpp  test_huobi_pagination.cpp  test_huobi_usdt_swap_pagination.cpp  test_kraken_futures_pagination.cpp  test_kraken_pagination.cpp  test_kucoin_futures_pagination.cpp  test_kucoin_pagination.cpp  test_mexc_futures_pagination.cpp  test_mexc_pagination.cpp  test_okx_pagination.cpp  test_whitebit_pagination.cpp
